[package]
name = "libretest"
version = "0.1.0"
authors = ["Bastián <bastian.vergara@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
actix-identity = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"] }
diesel = {version= "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
r2d2 = "0.8"
lazy_static = "1.4"
listenfd = "0.3.3"
env_logger = "0.8.2"
rand = "0.7"
rust-argon2 = "0.5"